    up correctly for String#== and #===.  Bug #244 by Neurogami.
  * RDoc no longer adds "http://" to urls without a scheme.  Bug #208 by
    Zachary Scott.
  * Improved the error message in the RDoc server when ri data is missing.
    Bug #243, Pull Request #249 by Tadas Tamošauskas.
  * Support ruby 2.0 hash syntax for keywords.  Bug #256 by diogocsc.

=== 4.0.1 / 2013-03-27

* Bug fixes
  * RDoc::Options parser should rescue from OptionParser::ParseError.
  * Updated example of RDoc::Options to include reopening RDoc::Options.
    Pointed out by Michael Granger
  * Moved RubyGems documentation installed message into RDoc hook.  For
    RubyGems bug #469 by Jeff Sandberg
  * An Error is now raised when a heredoc is not terminated.  Fixes exceptions
    when processing comment blocks.  Reported by darix
  * rdoc --quiet --no-ignore-invalid now exits for invalid options.  Pull
    request #192 by Jeremy Evans
  * RDoc::Parser::C no longer ignores a (METHOD) cast in rb_define_method.
    Pull request #184 by Carlos Agarie
  * RDoc::Servlet no longer ignores extra directories from -d.  Pull request
    #173 by Thomas Leitner
  * Fixed `rdoc --ri-site`.  Bug #193 by Michal Papis.
  * RDoc no longer attempts to parse binary files.  Bug #189 by postmodern,
    Bug #190 by Christoffer Lervåg, Bug #195 by Aaron Patterson
  * `rdoc --pipe` output now contains <code></code> for markdown compliance.
  * RDoc no longer leaves emacs-style modelines in .txt, .md or .rd files.
    Bug #178 by Zachary Scott
  * RDoc no longer puts raw markup in HTML output for markdown input.  Bug
    #204 by Erik Hollensbe
  * Code objects with nodoc are no longer included in the ri store.  Bug #177
    by Thomas Leitner.
  * Text#snippet now creates a RDoc::Markup::ToHtmlSnippet correctly.
  * The C parser now de-duplicates call-seq if the same C function is used for
    multiple method names.  Bug #203 by Pete Higgins

=== 4.0.0 / 2013-02-24
